--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,3 +1,13 @@
+header {
+    display: flex;
+    align-items: center;
+}
+
 p {
     margin-right: 20%;
+}
+
+nav {
+    display: flex;
+    gap: 20px;
 }
